--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "forever start index.js",
+    "stop": "forever stop index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,5 +13,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "pug": "^2.0.3"
+  },
+  "devDependencies": {
+    "forever": "^0.15.3"
   }
 }
